src/test/deca/syntax/parser/invalid/class_definition_with_number.deca
// Test parser, déclaration d'une classe avec un nombre

class 145 {
    
}